force-app/main/default/objects/Relationship_Type_Setting__mdt/Relationship_Type_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Classifies each hed__Relationship__c.hed__Type__c picklist value: which side of a parent/child relationship it describes, and whether that value grants portal/agent access to the related Contact. Any value with no record here grants no access.</description>
    <label>Relationship Type Setting</label>
    <pluralLabel>Relationship Type Settings</pluralLabel>
</CustomObject>