force-app/main/default/objects/Relationship_Type_Setting__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Which side of the relationship Type_Value__c describes: Child (on the parent's own hed__Relationship__c record, e.g. &quot;Daughter&quot;) or Guardian (EDA's auto-created reciprocal on the child's record, e.g. &quot;Father&quot;). Access filtering uses Child-category values only.</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>