force-app/main/default/objects/Relationship_Type_Setting__mdt/fields/Grants_Access__c.field-meta.xml
<CustomField>
    <fullName>Grants_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a Current hed__Relationship__c row with this Type_Value__c grants the parent access to the related Contact. Any hed__Type__c value with no record here, or with this unchecked, grants no access.</description>
    <label>Grants Access</label>
    <type>Checkbox</type>
</CustomField>