force-app/main/default/objects/Relationship_Type_Setting__mdt/fields/Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Type_Value__c</fullName>
    <description>The exact hed__Relationship__c.hed__Type__c picklist value this record classifies, e.g. &quot;Daughter&quot; or &quot;Father&quot;.</description>
    <label>Type Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>